# ml_studying

./: .gitignore  pyproject.toml
aml/01_feml/: 01_lineal_regression.ipynb  02_hw_logistic_regression.ipynb  02_logistic_regression.ipynb  03_hw_gradient_descent.ipynb  04_hw_classification_metrics.ipynb  07_hw_features.ipynb  08_hw_decision_tree.ipynb  09_hw_ensemble.ipynb  10_hw_abnormal_data.ipynb  makarov_LogisticRegression.ipynb  ponomareva_practice_decision_tree_stop_criteria.ipynb  rashka_logistic_regression.ipynb
aml/deep_learn/: optimization_nw.ipynb
aml/pandas/: pandas_DataFrame.ipynb
aml/rsml_18/: HW01_RSML.ipynb  Lesson_1.ipynb  Lesson_2.ipynb
