[tool.poetry]
name = "aml"
version = "0.1.0"
description = ""
authors = ["Andrew <balshowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
jupyterlab = "^4.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
