[tool.poetry]
name = "aml"
version = "0.1.0"
description = ""
authors = ["Andrew <balshowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
jupyterlab = "^4.0.11"
seaborn = "^0.13.2"
category-encoders = "^2.6.3"
reverse-geocoder = "^1.5.1"
folium = "^0.15.1"
keplergl = "^0.3.2"
lightgbm = "^4.3.0"
catboost = "^1.2.3"
xgboost = "^2.0.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
